--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## sca-c4 capstone project This app is built with only vanilla javascript with the following functionalities:- - It searches out recipes by name from a recipe database. - Bookmarks favourite recipes. - Displays recipes details. - Increments recipes ingredients depending on user's servings.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.6"
   }
 }
