--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "recipe_app",
   "version": "1.0.0",
   "description": "## sca-c4 capstone project This app is built with only vanilla javascript with the following functionalities:- - It searches out recipes by name from a recipe database. - Bookmarks favourite recipes. - Displays recipes details. - Increments recipes ingredients depending on user's servings.",
-  "main": "index.js",
+  "private": true,
   "scripts": {
+    "build": "webpack --config webpack.config.js",
     "test": "jest"
   },
   "repository": {
@@ -20,13 +21,17 @@
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.7",
     "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^27.0.6"
+    "jest": "^27.0.6",
+    "webpack": "^5.43.0",
+    "webpack-cli": "^4.7.2"
   }
 }
