--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,10 @@
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
-    "no-shadow": "off"
+    "no-shadow": "off",
+    "no-use-before-define": "off",
+    "no-param-reassign": "off",
+    "max-classes-per-file": "off"
   },
   "ignorePatterns": [
     "dist/",
